Fix issues with JFR generation on hyperfoil controller

--- a/roles/server/tasks/fetch.yml
+++ b/roles/server/tasks/fetch.yml
@@ -1,6 +1,6 @@
   - name: Download JFR files
     ansible.builtin.fetch:
-      src: "/tmp/jfr/server-{{ inventory_hostname }}.jfr"
+      src: "{{ server_tmp_dir }}/jfr/server-{{ inventory_hostname }}.jfr"
       dest: "./"
       flat: true
     when: capture_jfr
