Install JDK 17 on controller and agent
* Also change podman install for Debian to update package cache

--- a/roles/hyperfoil_controller/tasks/init.yml
+++ b/roles/hyperfoil_controller/tasks/init.yml
@@ -1,4 +1,3 @@
-- name: "Installing Java 17 on Hyperfoil Agent"
+- name: "Installing Java 17 on Hyperfoil Controller"
   ansible.builtin.include_role:
     name: java_installer
-
