--- a/roles/hyperfoil_controller/tasks/main.yml
+++ b/roles/hyperfoil_controller/tasks/main.yml
@@ -2,6 +2,10 @@
   debug:
     msg: "Controller is {{ hyperfoil_controller_host | default(ansible_hostname) }}"
 
+- name: "Initializing hyperfoil controller requirements"
+  ansible.builtin.include_tasks: init.yml
+  when: operation is undefined or operation is search("init")
+
 - ansible.builtin.include_tasks: run.yml
   when: operation is undefined or operation is search("run")
 
