--- a/roles/server/tasks/init.yml
+++ b/roles/server/tasks/init.yml
@@ -1,8 +1,18 @@
+- name: Installing podman on Debian
+  apt:
+    name: podman
+    update_cache: yes
+  become: true
+  when: ansible_distribution == "Debian" or ansible_distribution == "Ubuntu"
+
 - name: Install podman
   package:
    name: podman
    state: present
   become: true
+  when:
+    - ansible_distribution != "Debian"
+    - ansible_distribution != "Ubuntu"
 
 - name: Create a directory if it does not exist
   ansible.builtin.file:
