--- a/roles/aws_ec2/defaults/main.yml
+++ b/roles/aws_ec2/defaults/main.yml
@@ -6,9 +6,16 @@ cidr_ip: "{{ control_host_ip.stdout }}/32"
 server_cluster_size: 3
 server_instance_type: t2.micro
 # Ubuntu
-server_ami_name: ubuntu/images/hvm-ssd/ubuntu-jammy-22.04-amd64-server-20240207.1
+#server_ami_name: ubuntu/images/hvm-ssd/ubuntu-jammy-22.04-amd64-server-20240207.1
+server_ami_name: debian-12-amd64-20231013-1532
+#server_ami_name: al2023-ami-2023.3.20240304.0-kernel-6.1-x86_64
 # Needs to match the user created by AMI
-server_user: ubuntu
+#server_user: ubuntu
+server_user: admin
+#server_user: ec2-user
+server_volume_name: /dev/xvda
+# Allows overriding the size of the volume used by the server image
+server_volume_size: 20
 
 agent_cluster_size: 2
 agent_instance_type: t2.micro
@@ -18,7 +25,9 @@ agent_ami_name: al2023-ami-2023.3.20240304.0-kernel-6.1-x86_64
 # Needs to match the user created by AMI
 #agent_user: ubuntu
 agent_user: ec2-user
-
+agent_volume_name: "/dev/xvda"
+# Allows overriding the size of the volume used by the server image
+agent_volume_size: "8"
 
 # Controller only supports 1, so this cannot be changed
 controller_cluster_size: 1
@@ -29,5 +38,7 @@ controller_ami_name: al2023-ami-2023.3.20240304.0-kernel-6.1-x86_64
 # Needs to match the user created by AMI
 #controller_user: ubuntu
 controller_user: ec2-user
+controller_volume_name: "/dev/xvda"
+controller_volume_size: "8"
 
 no_log_sensitive: true
