--- a/roles/hyperfoil_controller/tasks/run.yml
+++ b/roles/hyperfoil_controller/tasks/run.yml
@@ -1,3 +1,16 @@
+- name: Check for hyperfoil_log_config
+  when: hyperfoil_log_config is defined
+  fail:
+    msg: "Use controller_log_config instead of hyperfoil_log_config"
+- when: controller_log_config is defined
+  block:
+  - name: Upload log config file
+    ansible.builtin.copy:
+      src: "{{ controller_log_config }}"
+      dest: "/tmp/hyperfoil/"
+  - ansible.builtin.set_fact:
+      hyperfoil_log_config: "/tmp/hyperfoil/{{ controller_log_config | basename }}"
+
 - name: Setup Hyperfoil controller
   ansible.builtin.import_role:
     name: hyperfoil.hyperfoil_setup
