Run multiple benchmarks in sequence
Created a playbook that can run multiple benchmarks in sequence. The
playbook assumes the instances are available to run.

We start/stop the Hyperfoil controller, and start/stop the server for
each benchmark executed. The playbook requires an input file detailing
all the tests to run, with details about the Hyperfoil benchmark file
and which cache configuration to utilize.

--- a/roles/hyperfoil_agent/defaults/main.yml
+++ b/roles/hyperfoil_agent/defaults/main.yml
@@ -1,3 +1,5 @@
+# Name of the cache to install use on the Infinispan Server
+cache_name: benchmark
 # The default test name to find in the benchmarks directory with a prefix ending in `yaml.j2`
 test_name: hotrod-benchmark
 # The JVM arguments to provide to the agent when it starts
