Make hosts for playbooks overrideable

--- a/hyperfoil_controller.yml
+++ b/hyperfoil_controller.yml
@@ -1,2 +1,2 @@
-- hosts: hyperfoil_controller
+- hosts: "{{ hyperfoil_controller_host | default('hyperfoil_controller') }}"
   roles: [ hyperfoil_controller ]
