--- a/roles/hyperfoil_agent/tasks/download_logs.yml
+++ b/roles/hyperfoil_agent/tasks/download_logs.yml
@@ -1,5 +1,5 @@
 - name: Download the log files from each
   ansible.builtin.fetch:
-    src: "/tmp/hyperfoil/workspace/agent.{{ inventory_hostname }}.log"
+    src: "{{ hyperfoil_dir }}/workspace/agent.{{ inventory_hostname }}.log"
     dest: "./"
     flat: yes
